[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/placeholder.png" type="Texture" id=1]
[ext_resource path="res://src/Abilities/Skills/SkillBase.gd" type="Script" id=2]

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12.968, -13.0027, 12.144, -12.8432, 11.8568, 5.79137, -2.40629, 5.79137, -12.9361, 5.63182 )

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="Spawn" type="Tween" parent="."]

[node name="Despawn" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="tween_all_completed" from="Spawn" to="." method="_on_Spawn_tween_all_completed"]
[connection signal="tween_all_completed" from="Despawn" to="." method="_on_Despawn_tween_all_completed"]
